--- a/client/src/components/categoryItem.css
+++ b/client/src/components/categoryItem.css
@@ -2,8 +2,8 @@
    flex:1;
    position: relative;
 }
-.categoryItem > img{
-    width:50%;
+.category-img{
+    width:100%;
 }
 .info{
     position:absolute;
